fixed spacing in publication

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ header {
   /* border-radius: 1rem; */
   font-weight: bold;
   background: linear-gradient(
-    to left top,
-    rgba(255, 255, 255, 0.8),
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.5)
   );
   /* height: 0px; */
@@ -30,7 +30,7 @@ header {
   /* margin-top: 30px; */
   align-items: center;
   padding: 15px 12%;
-  box-shadow: 5px 6px 25px rgba(43, 43, 43, 0.212);
+  /* box-shadow: 5px 6px 25px rgba(43, 43, 43, 0.212); */
 }
 h1 {
   color: #345179;
@@ -41,6 +41,7 @@ h1 {
 }
 h2 {
   line-height: 1.2em;
+  margin-right: 4px;
   font-size: 0.9rem;
   color: #6b727c;
   font-weight: 500;
@@ -265,7 +266,7 @@ a:hover {
     rgba(255, 255, 255, 0.5)
   );
   border-radius: 1rem;
-  margin: 1rem 0rem;
+  margin: 0.7rem 0rem;
   padding: 1.2rem;
   box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
   justify-content: space-between;
